--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -30,7 +30,7 @@
     margin-left: 52px;
     transition: .3s all;
     &:hover {
-      color: #0E68EF;
+      color: #BCBBFF;
     }
   }
   &-social {
@@ -46,7 +46,7 @@
     margin-right: 112px;
     transition: .4s all;
     &:hover {
-      color: #0E68EF;
+      color: #BCBBFF;
     }
   }
   &-link {  
@@ -63,7 +63,7 @@
     &:hover {
       svg {
         path {
-          stroke: #0E68EF;
+          stroke: #BCBBFF;
         }
       }
     }
