--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -1,251 +1,10 @@
-.nav {
-  padding: 64px 0px 0px 0px;
-  background: #131218;
-  &-toggle {
-    width: 32px;
-    height: 32px;
-    position: relative;
-    cursor: pointer;
-    display: none;
-    transition: .4s all;
-    span {
-      width: 65%;
-      height: 3px;
-      background-color: #2C3E50;
-      position: absolute;
-      top: 50%;
-      left: 0;
-      transform: translateY(-50%);
-      border-radius: 90px;
-    }
-    &::before,
-    &:after {
-      content: '';
-      width: 100%;
-      height: 3px;
-      background-color: #2C3E50;
-      position: absolute;
-      border-radius: 90px;
-    }
-    &:before {
-      top: 0;
-      left: 0;
-    }
-    &:after {
-      bottom: 0;
-      left: 0;
-    }
-    &-active {
-      transition: .4s all;
-      span {
-        display: none;
-      }
-      &::before {
-        transform: rotate(45deg);
-        top: 50%;
-      }
-      &::after {
-        transform: rotate(-45deg);
-        bottom: 43%;
-      }
-    }
-  }
-  &-wrap {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    opacity: 0;
-  }
-  &-logo {
-    img {
-      max-width: 200px;
-    }
-  }
-  &-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 150px;
-    &__mob {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      margin-left: 0!important;
-      .nav-list-item {
-        margin-right: 0;
-        margin-bottom: 46px;
-        &__sale {
-          font-size: 16px;
-          width: 55px;
-          height: 26px;
-        }
-        a {
-          font-size: 22px;
-          line-height: 111%;
-          color:#FFFFFF;
-        }
-      }
-    }
-    &-item {
-      margin-right: 121px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      transition: .3s all;
-      &:last-child {
-        margin-right: 0;
-      }
-      &:hover {
-        transform: translateX(10px);
-        a {
-          color: #2F2CE9;
-          &::before {
-            opacity: 1;
-          }
-        }
-      }
-      a {
-        font-weight: normal;
-        font-size: 26.3px;
-        font-size: calc(16px + 4 * (100vw / 2560));
-        line-height: 111%;
-        color:#FFFFFF;
-        transition: .3s all;
-        &::before {
-          content: '';
-          position: absolute;
-          left: -23px;
-          top: calc(50% - 0.5px);
-          width: 18px;
-          height: 1px;
-          background-color: #2F2CE9;
-          opacity: 0;
-          transition: .3s all;
-        }
-      }
-      &__sale {
-        cursor: default;
-        font-weight: normal;
-        font-size: 20px;
-        line-height: 111%;
-        width: 78px;
-        height: 35px;
-        color: #FA4A4A;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-left: 6px;
-      }
-    }
-  }
-  &-social {
-    &__mob {
-      display: flex;
-      margin-bottom: 0px;
-      justify-content: space-between;
-      .nav-social {
-        &__link {
-          img {
-            max-width: 52px;
-            width: 42px;
-          }
-        }
-      }
-    }
-    &__link {
-      margin-right: 63px;
-      &:last-child {
-        margin-right: 0;
-      }
-      svg {
-        path {
-          stroke: #FFFFFF;
-        }
-      }
-      &:hover {
-        svg {
-          path {
-            stroke: #0E68EF;
-            transition: .3s all;
-          }
-        }
-      }
-      svg {
-        max-width: 40px;
-      }
-    }
-  }
-}
 
-.menu {
-  position: fixed;
-  opacity: 0;
-  overflow: hidden;
-  visibility: hidden;
-  top: 60px;
-  left: 0;
-  background-color: #fff;
-  z-index: 20;
-  width: 100%;
-  min-height: 500px;
-  height: 100%;
-  padding: 82px 0 90px 0;
-  transform: translateX(-500vh);
-  transition: .4s all;
-  .container-fluid {
-    width: 100%;
-  }
-  &-card {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-  }
-  &-active {
-    display: flex;
-    opacity: 1;
-    visibility: visible;
-    overflow: visible;
-    transform: translateX(0);
-  }
-  &-wrap {
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-  }
-  &-btn {
-    width: 378px;
-    height: 80px;
-    margin-left: 10px;
-    border: 1px solid #131218;
-    box-sizing: border-box;
-    border-radius: 43px;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 162%;
-    letter-spacing: -0.015em;
-    text-transform: uppercase;
-    color: #131218;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  &-social {
-    &-wrap {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 100%;
-    }
-  }
-}
+
+
 
 .header {
   padding-top: 402px;
-  padding-bottom: 460px;
+  padding-bottom: 452px;
   background: #131218;
   margin-bottom: 150px;
   &-wrapper {
@@ -254,17 +13,22 @@
     align-items: flex-start;
     width: 100%;
   }
+  &-block {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
   &-wrap {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
   }
   &-name {
-    margin-bottom: 25px;
+    margin-bottom: 11px;
   }
   &-title {
-    margin-bottom: 25px;
+    margin-bottom: 0px;
     font-weight: 600;
     font-size: calc(34px + 166 * (100vw / 2560));
     line-height: 111%;
@@ -274,7 +38,7 @@
 
   }
   &-subtitle {
-
+    
   }
   h3 {
     font-weight: normal;
