--- a/src/sass/blocks/_focus.scss
+++ b/src/sass/blocks/_focus.scss
@@ -2,15 +2,7 @@
 .focus {
   background: #131218;
   mix-blend-mode: normal;
-  padding: 251px 148px 251px 148px;
-  // &-card {
-  //   background: #131218;
-  //   border-radius: 8.21875px;
-  //   display: flex;
-  //   justify-content: space-between;
-  //   align-items: center;
-  //   padding: 260px 473px 260px 120px;
-  // }
+  padding: 251px 168px 251px 241px;
   &-title {
     max-width: 1317px;
     font-size: calc(32px + 98 * (100vw / 2560));
@@ -20,86 +12,8 @@
     letter-spacing: -0.03em;
     text-transform: uppercase;
     color: #FFFFFF;
-
-  }
-  &-pepe {
-    position: relative;
-    &:hover {
-      .focus-image {
-        opacity: 1;
-        visibility: visible;
-      }
+    br {
+      display: none;
     }
-  }
-  &-image {
-    opacity: 0;
-    visibility: hidden;
-    z-index: 1;
-    position: absolute;
-    top: -100px;
-    right: -110px;
-    transition: .3s all;
-    img {
-      max-width: 184px;
-    }
-  }
-  &-btn {
-    width: 203px;
-    height: 202px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    &:hover {
-      .focus-image {
-        opacity: 1;
-        visibility: visible;
-      }
-    }
-    &::after,
-    &::before {
-      content: '';
-      position: absolute;
-      // top: 50%;
-      // left: 50%;
-      // transform: translate(-50%, -50%);
-      border-radius: 100%;
-    }
-    &::before { // внутрений круг
-      width: 133px;
-      height: 132px;
-      border: 1.64375px solid rgba(47, 44, 233, 0.205);
-      animation: focus-btn 3s infinite ease;
-    }
-    &::after { // внешний круг
-      border: 1.64375px solid rgba(47, 44, 233, 0.103);
-      width: 203px;
-      height: 202px;
-      animation: focus-btn 3s infinite ease;
-    }
-    span {
-      display: block;
-      width: 59px;
-      height: 58px;
-      background: #2F2CE9;
-      border-radius: 100%;
-      z-index: 10;
-      position: relative;
-    }
-  }
-}
-
-@keyframes focus-btn {
-  0% {
-    transform:  scale(1);
-    opacity: 1;
-  }
-  50% {
-    transform:  scale(0.9);
-    opacity: 0.64;
-  }
-  100% {
-    transform:  scale(1) ;
-    opacity: 1;
   }
 }
