--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,6 +18,9 @@ a {
         text-decoration: none;
     }
 }
+body {
+    overflow-x: hidden;
+}
 span {
     padding: 0;
     margin: 0;
@@ -35,129 +38,14 @@ span {
         padding-right: 283px;
     }
 }
-.text__animation_1 {
-    transform: rotate(2deg) translateY(30px);
-    transform-origin: 0 50%;
-    position: relative;
-    transition: .4s cubic-bezier(0.25, 0.1, 0.25, 1);
-    opacity: 0;
-}
-.text__animation_2 {
-    transform: rotate(1deg) translateY(2px);
-    transform-origin: 0 50%;
-    position: relative;
-    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-delay: .15s;
-    transition-duration: .85s;
-    &:before {
-        content: '';
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        opacity: 1;
-        visibility: visible;
-        transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-        transition-delay: .15s;
-        transition-duration: .90s;
-        background: #131218;
-    }
-}
 
-.text-anim {
-    transform: rotate(0deg) translateY(0px);
-    transform-origin: 0 50%;
-    opacity: 1;
-    &:before {
-        bottom: -100%;
-    }
-}
-.opacity-animate {
-    opacity: 1!important;
-    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-delay: .2s;
-    transition-duration: .6s;
-}
-.preloader {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    background: #FFF;
-    padding: 66px 40px 40px 40px;
-    border-left: 0px solid #130EFF;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    &:hover {
 
-    }
-    &-card {
-        background: #131218;
-        padding: 50px 61px;
-    }
-    &-none {
-        border-left: 2000px solid #130EFF;
-        transform: translateX(100%);
-        transition-property: transform, border-left;
-        transition-delay: 0s, 0.06s;
-        transition-duration: 1.4s, 1.46s;
-        transition-timing-function: cubic-bezier(.5,-0.03,.46,1.1), cubic-bezier(.5,-0.03,.46,1.1);
-    }
-    &-none {
-        .preloader {
-            width: 0%;
-            &-title,
-            &-timer {
-                opacity: 0;
-            }
-        }
-    }
-    &-title {
-        max-width: 515px;
-        font-weight: 600;
-        font-size: 92px;
-        line-height: 111%;
-        letter-spacing: -0.02em;
-        text-transform: uppercase;
-        color: #FFFFFF;
-        transition: .2s all;
-    }
-    &-timer {
-        font-weight: 600;
-        font-size: 32px;
-        line-height: 111%;
-        letter-spacing: -0.02em;
-        text-transform: uppercase;
-        color: #FFFFFF;
-        position: absolute;
-        bottom: 40px;
-        right: 40px;
-        transition: .2s all;
-    }
-}
 
-@keyframes preloader-width {
-    from {
-        transform: translateX(0);
-    }
 
-    to {
-        transform: translateX(100%);
-    }
-}
-@keyframes preloader-border {
-    from {
-        border-left: 0px solid #130EFF;
-    }
 
-    to {
-        border-left: 2000px solid #130EFF;
-    }
-}
+
+
+
 @import 'blocks/header';
 @import 'blocks/exp';
 @import 'blocks/partner';
@@ -168,8 +56,10 @@ span {
 @import 'blocks/discuss';
 @import 'blocks/footer';
 @import 'blocks/main-404';
-
-
+@import 'blocks/animate';
+@import 'blocks/cursor';
+@import 'blocks/nav';
+@import 'blocks/menu';
 
 
 @import 'base/media';
