--- a/src/sass/blocks/_cursor.scss
+++ b/src/sass/blocks/_cursor.scss
@@ -20,11 +20,12 @@ div.cursors div {
   color: #FFFFFF;
   opacity: 0;
   transition: opacity 0.5s;
+  z-index: 2000;
 }
 .cursor-2 {
   position: absolute;
   top: -10px;
-  left: -10px;
+  left: -200px;
   width: 600px;
   font-size: 42px;
   line-height: 111%;
@@ -32,8 +33,9 @@ div.cursors div {
   text-transform: uppercase;
   color: #FFFFFF;
   opacity: 0;
-  transition: opacity 0.5s;
+  transition: opacity 0.1s;
   text-shadow: 0px 1px 22px rgba(83, 45, 45, 0.06);
+  z-index: 2000;
 }
 .visible {
   opacity: 1;
