--- a/src/sass/blocks/_animate.scss
+++ b/src/sass/blocks/_animate.scss
@@ -103,27 +103,27 @@
 
 // First block show animate Close
 
+// Work
+
+.work {
+  &-item {
+    img {
+      transition: .4s all;
+    }
+    &:hover {
+      cursor: none;
+      img {
+        filter: brightness(0.7);
+      }
+    }
+  }
+}
+
+// Work Close
+
 // AOS animate
 
-// [data-aos='my-animate'] {
-//   opacity: 0;
-// }
-// [data-aos='my-animate'].aos-animate {
-//   opacity: 1;
-// }
-
-
-[data-aos="left-rotate"] {
-  transform: rotate(4deg) translateY(50px);
-  transform-origin: 0 50%;
-  opacity: 0;
-}
-[data-aos="left-rotate"].aos-animate {
-  transform: rotate(0deg) translateY(0);
-  transform-origin: 0 50%;
-  opacity: 1;
-}
-
+//? Для всех
 [data-aos="standart"] {
   transform: translateY(50px);
   // transform-origin: 0 50%;
@@ -135,126 +135,10 @@
   opacity: 1;
 }
 
-
 [data-aos] {
   body[data-aos-easing="default"] &,
   &[data-aos][data-aos-easing="default"] {
     transition-timing-function: cubic-bezier(.5,-0.03,.46,1.11);
   }
-}
-
-[data-aos] {
-  body[data-aos-easing="Ease-Both"] &,
-  &[data-aos][data-aos-easing="Ease-Both"] {
-    transition-timing-function: cubic-bezier(.42,0,.58,1);
-  }
-}
-
-[data-aos="rotate-scale"] {
-  transform: rotate(-2deg);
-  opacity: 0.9;
-}
-[data-aos="rotate-scale"].aos-animate {
-  transform: rotate(0deg);
-  opacity: 1;
-}
-
-
-[data-aos="partner"] {
-  transform: translateY(70px);
-  opacity: 0;
-}
-[data-aos="partner"].aos-animate {
-  transform: translateY(0);
-  opacity: 1;
-}
-
-
-[data-aos="work-image"] {
-  transform: rotate(3deg) translateY(70px);
-  opacity: 0;
-}
-[data-aos="work-image"].aos-animate {
-  transform: rotate(0deg) translateY(0);
-  opacity: 1;
-}
-
-
-
-[data-aos="work-image"] {
-  transform: rotate(3deg) translateY(70px);
-  opacity: 0;
-}
-[data-aos="work-image"].aos-animate {
-  transform: rotate(0deg) translateY(0);
-  opacity: 1;
-}
-
-[data-aos="top-opacity"] {
-  transform: translateY(80px);
-  opacity: 0;
-}
-[data-aos="top-opacity"].aos-animate {
-  transform: translateY(0);
-  opacity: 1;
-}
-
-[data-aos="discuss-btn"] {
-  // transform: rotate(3deg);
-  opacity: 0;
-}
-[data-aos="discuss-btn"].aos-animate {
-  // transform: rotate(0deg);
-  opacity: 1;
-}
-
-
-@media (max-width: 1440px) {
-  
-[data-aos="left-rotate"] {
-  transform: rotate(3deg) translateY(20px);
-  transform-origin: 0 50%;
-  opacity: 0;
-}
-[data-aos="left-rotate"].aos-animate {
-  transform: rotate(0deg) translateY(0);
-  transform-origin: 0 50%;
-  opacity: 1;
-}
-[data-aos="partner"] {
-  transform: translateY(30px);
-  opacity: 0;
-}
-[data-aos="partner"].aos-animate {
-  transform: translateY(0);
-  opacity: 1;
-}
-
-[data-aos="work-image"] {
-  transform: rotate(3deg) translateY(30px);
-  opacity: 0;
-}
-[data-aos="work-image"].aos-animate {
-  transform: rotate(0deg) translateY(0);
-  opacity: 1;
-}
-
-[data-aos="work-image"] {
-  transform: rotate(3deg) translateY(30px);
-  opacity: 0;
-}
-[data-aos="work-image"].aos-animate {
-  transform: rotate(0deg) translateY(0);
-  opacity: 1;
-}
-
-[data-aos="top-opacity"] {
-  transform: translateY(35px);
-  opacity: 0;
-}
-[data-aos="top-opacity"].aos-animate {
-  transform: translateY(0);
-  opacity: 1;
-}
 }
 // AOS annimate Close
