--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,7 +1,7 @@
 
 
 @import 'libs/bootstrap-reboot.min';
-@import 'libs/bootstrap-grid.css';
+// @import 'libs/bootstrap-grid.css';
 
 * {
     font-family: 'Carmen Sans';
@@ -33,6 +33,7 @@ span {
     width: 100%;
     padding-left: 240px;
     padding-right: 240px;
+    margin: auto;
     &-work {
         padding-left: 283px;
         padding-right: 283px;
