--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -28,6 +28,7 @@ span {
 .container-fluid {
     padding-left: 148px;
     padding-right: 148px;
+    width: 100%;
 }
 .container {
     width: 100%;
