--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -145,9 +145,8 @@
     }
   }
   .header {
-    padding-top: 238px;
-    padding-bottom: 293px;
     margin-bottom: 100px;
+    min-height: 720px;
     &-title {
       font-size: calc(52px + 68 * (100vw / 1440));
       margin-bottom: 0px;
@@ -515,7 +514,7 @@
   }
   // adaptive text
   .header {
-    padding: 150px 0 200px 0;
+    min-height: 551px;
     &-title {
       font-size: calc(52px + (148 + 148 * 0.7) * ((100vw - 320px) / 2560));
     }
@@ -607,7 +606,7 @@
     }
   }
   .header {
-    padding: 80px 0 127px 0;
+    min-height: 417px;
     margin-bottom: 41px;
     &-name {
       margin-bottom: 0;
