--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,8 +18,12 @@ a {
         text-decoration: none;
     }
 }
+html {
+    scroll-behavior: smooth;
+}
 body {
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 span {
     padding: 0;
