remove scroll/ add new page 2560px

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,12 +18,8 @@ a {
         text-decoration: none;
     }
 }
-html {
-    scroll-behavior: smooth;
-}
 body {
     overflow-x: hidden;
-    scroll-behavior: smooth;
 }
 span {
     padding: 0;
@@ -43,20 +39,25 @@ span {
         padding-left: 283px;
         padding-right: 283px;
     }
+    &-defi {
+        padding-right: 390px;
+        padding-left: 390px;
+        max-width: 2560px;
+        margin: 0 auto;
+    }
 }
-
-
-
-// ::-webkit-scrollbar {
-//     -webkit-appearance: none;
-//     width: 7px;
-// }
-// ::-webkit-scrollbar-thumb {
-//     border-radius: 4px;
-//     background-color: rgba(0,0,0,.5);
-//     box-shadow: 0 0 1px rgba(255,255,255,.5);
-// }
-
+.next-case {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    font-size: 64px;
+    line-height: 111%;
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+    color: #131218;
+    margin-bottom: 155px;
+}
 
 
 
@@ -74,6 +75,11 @@ span {
 @import 'blocks/cursor';
 @import 'blocks/nav';
 @import 'blocks/menu';
+@import 'blocks/defi-1';
+@import 'blocks/defi-2';
+@import 'blocks/defi-text';
+@import 'blocks/defi-images';
+@import 'blocks/check';
 
 
 @import 'base/media';
