--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -1,4 +1,12 @@
 //?
+@media (max-width: 2540px) {
+  .container {
+    &-defi {
+      padding-right: 40px;
+      padding-left: 40px;
+    }
+  }
+}
 @media (max-width: 2100px) {  
   .exp {
     &-title {
@@ -113,6 +121,7 @@
   .container {
     padding-right: 40px;
     padding-left: 40px;
+
   }
   .nav {
     padding: 33px 0 0 0;
