--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -48,4 +48,38 @@
     color: #FFF;
     font-size: calc(14px + 10 * (100vw / 2560));
   }
+
+  &-defi {
+    margin: 206px 0px 156px 0px;
+    &-title {
+      font-size: calc(46px + 94 * (100vw / 2560));
+      font-weight: 600;
+      line-height: 111%;
+      letter-spacing: -0.03em;
+      text-transform: uppercase;
+      color: #1D1A23;
+      margin-bottom: 18px;
+    }
+    &-text {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+    &-descr {
+      font-size: 24px;
+      line-height: 130%;
+      letter-spacing: -0.01em;
+      color: #1D1A23;
+
+      p {
+        max-width: 527px;
+      }
+    }
+    &-year {
+      font-size: 24px;
+      line-height: 111%;
+      letter-spacing: -0.01em;
+      color: #1D1A23;
+    }
+  }
 }
