--- a/src/sass/blocks/_defi-1.scss
+++ b/src/sass/blocks/_defi-1.scss
@@ -1,5 +1,8 @@
 .defi-1 {
   &__image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     img {
       max-width: 100%;
       max-height: 782px;
