--- a/src/sass/blocks/_defi-images.scss
+++ b/src/sass/blocks/_defi-images.scss
@@ -1,10 +1,14 @@
 .defi-images {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   &-image {
+    margin-right: 44px;
+    &:last-child {
+      margin-right: 0;
+    }
     img {
-      max-width: 868px;
+      max-width: 100%;
       max-height: 937px;  
     }
   }
