--- a/src/sass/blocks/_nav.scss
+++ b/src/sass/blocks/_nav.scss
@@ -164,6 +164,13 @@
   &-white {
     background-color: #fff;
     .nav {
+      &-toggle {
+        span,
+        &::before,
+        &::after {
+          background-color: #1D1A23;
+        }
+      }
       &-list {
         &-item {
           &:hover {
