--- a/src/sass/blocks/_defi-text.scss
+++ b/src/sass/blocks/_defi-text.scss
@@ -12,7 +12,7 @@
   &-title {
     text-align: left;
     font-weight: 600;
-    font-size: 80px;
+    font-size: calc(38px + 42 * (100vw / 2560));
     line-height: 111%;
     letter-spacing: -0.03em;
     text-transform: uppercase;
@@ -21,7 +21,7 @@
   }
   &-descr {
     text-align: left;
-    font-size: 24px;
+    font-size: calc(16px + 8 * (100vw / 2560));
     line-height: 162%;
     letter-spacing: -0.015em;
     color: #1D1A23;
