--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -66,11 +66,10 @@
       align-items: flex-start;
     }
     &-descr {
-      font-size: 24px;
       line-height: 130%;
       letter-spacing: -0.01em;
       color: #1D1A23;
-
+      font-size: calc(16px + 8 * (100vw / 2560));
       p {
         max-width: 527px;
       }
